EDELIVERY-15144 DomiSMP System notification - Generalize "time expiration" alerts
Add support for periodical alerts.